# i18n-node-enhanced

./: .guix-channel  AI.a2ml  CHANGELOG.adoc  CODE_OF_CONDUCT.md  DEVELOPMENT_SUMMARY.md  ECOSYSTEM.scm  MAINTAINERS.md  MANUAL_REVIEW_NEEDED.md  META.scm  README.adoc  README.md  RSR_COMPLIANCE.md  SECURITY.md  STATE.scm  TESTING-REPORT.adoc  TESTING-REPORT.scm  TPCF.md  channels.scm  deno.json  flake.nix  guix.scm  i18n.js  index.d.ts  justfile  manifest.scm  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  codeql.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  lint.yml  locale-validation.yml  node.js.yml  quality.yml  release.yml  rescript-deno-ci.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  security.yml  test.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  STATE.scm
.machines_readable/6scm/: PLAYBOOK.scm
.well-known/: ai.txt  humans.txt  security.txt
adapters/ais/: servicenow.js
adapters/crm/: salesforce.js
adapters/erp/: sap.js
audit/: forensics.js
automation/: api.js
bindings/rescript/: I18n.res  README.md  bsconfig.json  package.json
config/: i18n.ncl
container/: Containerfile  apko.yaml  nerdctl-compose.yaml
deno/: deno.json  mod.ts
guix/: channels.scm  polyglot-i18n.scm
julia/: Project.toml
locales/: en.yml
src/: mod.res  rescript.json
tools/: README.md  extract-strings.js  locale-validator.js  missing-translations.js  rsr-verify.js  sync-locales.js
tui/: polyglot_tui.gpr
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+53 files in other folders)
